PRACTICE 5: refactor code